--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">ProyectoCRUD</string>
+    <string name="app_name">Lista de Personas</string>
+    <string name="consejo_agregar">Para eliminar a una persona, mantenga presionado a esa persona en la lista, luego seleccione Eliminar y listo</string>
+    <string name="descripcion_agregar_persona">Botón para agregar una nueva persona</string>
+    <string name="formato_edad">%d años</string>
 </resources>
